clean up work navigation DOM/styles, fix overflow problems

--- a/source/stylesheets/work/_work-common.sass
+++ b/source/stylesheets/work/_work-common.sass
@@ -1,22 +1,3 @@
-.cm-work-header
-  position: absolute
-  z-index: 10
-  top: 0
-  left: 0
-  right: 0
-  background: rgba($back1, 0.4)
-  +transition(transform 300ms)
-  +transform(translateY(0))
-  &.ready
-    +transform(translateY(-50px))
-  &:hover,&.open
-    +transform(translateY(0))
-    h4
-      max-height: 4em
-      opacity: 1
-    .cm-work-nav-outer figure
-      opacity: 1
-
 /* work index page */
 
 .cm-work-list-title
@@ -90,6 +71,7 @@
       display: block
 
 /* main navigation */
+
 .cm-nav-in-work
   .cm-nav-button
     color: $text-color-light
@@ -105,21 +87,36 @@
       background: $fore2
 
 /* portfolio navigation */
-.cm-work-nav-outer
-  max-width: 100%
-  overflow: hidden
-.cm-work-nav
+
+.cm-work-nav-shuttle
+  list-style: none
   position: absolute
   top: 0
   left: 50%
   width: 4000px
+  margin: 0
+  padding: 0
   text-align: left
-  &.ready
-    +transition(margin-left 300ms)
-  menu
-    list-style: none
-    margin: 0
-    padding: 0
+
+  /* position */
+  @for $i from 1 through 30
+    &.open-#{$i}
+      margin-left: -#{(150 * $i) - 75}px
+      .slot-#{$i} h4
+        background: transparent
+        opacity: 0
+
+.cm-work-nav
+  position: absolute
+  z-index: 10
+  top: 0
+  left: 0
+  right: 0
+  height: 75px
+  overflow: hidden
+  background: rgba($back1, 0.4)
+  +transition(all 300ms)
+  +transform(translateY(0))
   li
     float: left
     width: 150px
@@ -136,13 +133,13 @@
     img 
       margin-top: -47px
   h4
-    max-height: 1em
+    height: 0
     opacity: 0
     margin: 0
-    padding: 0.5em
-    @include background(linear-gradient(rgba(#fff,1) 0%, rgba(#fff,0.5) 50%, rgba(#fff,0) 50%))
-    background-size: 100% 8em
-    background-position: 0 -4em
+    padding: 0 10px
+    @include background(linear-gradient(rgba(#fff,1) 0%, rgba(#fff,0.4) 50%, rgba(#fff,0) 50%))
+    background-size: 100% 150px
+    background-position: 0 -75px
     background-repeat: no-repeat
     font-weight: normal
     overflow: hidden
@@ -159,13 +156,20 @@
       h4
         color: $text-color-dark
         background-position: 0 0
+  &.ready
+    +transform(translateY(-50px))  
+    .cm-work-nav-shuttle
+      +transition(margin-left 300ms)
 
-  @for $i from 1 through 30
-    &.open-#{$i}
-      margin-left: -#{(150 * $i) - 75}px
-      .slot-#{$i} h4
-        background: transparent
-        opacity: 0
+  &:hover,&.open
+    height: 150px
+    +transform(translateY(0))
+    h4
+      opacity: 1
+      height: 55px
+      padding: 10px
+    figure
+      opacity: 1
 
 .cm-work-nav-prev,.cm-work-nav-next
   position: absolute
